<resources>
    <string name="app_name">HistoricalArtifactsApp</string>
    <string name="login">Log in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_btnIn">Login</string>
    <string name="create_btnIn">Create an Account</string>
    <string name="artifact_list">Artifact List</string>
    <string name="add_an_artifact">Add an Artifact</string>
    <string name="view_requests">View Requests</string>
    <string name="view_artifact">View Artifact</string>
    <string name="upload_picture">Upload Picture</string>
    <string name="create_artifact">Create Artifact</string>
    <string name="description">Description</string>
    <string name="cabinet_selection">Cabinet Selection</string>
    <string name="artifact_image">artifact_image</string>
    <string name="artifact_name">Artifact Name</string>
    <string name="artifact_description">Artifact Description</string>
    <string name="request_an_edit">Request an edit</string>
    <string name="edit_artifact">Edit Artifact</string>
    <string name="delete_artifact">Delete Artifact</string>
    <string name="create_an_artifact">Create an Artifact</string>
    <string name="uploaded_image">uploaded_image</string>
    <string name="name">Name</string>
    <string name="add_a_description">Add a description</string>
    <string name="name_of_artifact">Name of Artifact</string>
    <string name="add_a_name">add a name</string>
    <string name="update_artifact">Update Artifact</string>
    <string name="image_of_cabinet">Image Of Cabinet</string>
    <string name="view_cabinet">View Cabinet</string>
    <string name="search_hint">Search Artifacts</string>
    <string name="search">Search</string>
    <string name="view_notifications">View Notifications</string>
    <string name="clear">Clear</string>
    <string name="bookmark">Bookmark</string>
    <string name="no_active_notifications">No active notifications</string>
    <string name="no_active_reviews">No active reviews</string>
    <string name="view_notification_button">View notification button</string>
    <string name="cabinet_list">Cabinet List</string>
    <string name="create_a_cabinet">Create a Cabinet!</string>
    <string name="create_user">Create User</string>
    <string name="email1">Email</string>
    <string name="password1">Password</string>
    <string name="create_user1">Create User</string>
    <string name="continue_as_guest">Continue as guest</string>
    <string name="artifact_image1">Artifact image</string>
    <string name="artifact_name2">Artifact Name</string>
    <string name="artifact_description3">Artifact Description</string>
    <string name="review_date3">Review Date</string>
    <string name="status_tv">STATUS TV</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="view_review">View Review</string>
    <string name="artifact_name4">Artifact Name:</string>
    <string name="enter_artifact_name">Enter artifact name</string>
    <string name="description4">Description:</string>
    <string name="enter_artifact_description">Enter artifact description</string>
    <string name="submit_information">Submit Information</string>
</resources>