<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16dp"
            android:text="@string/edit_artifact"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/tempImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:contentDescription="@string/uploaded_image" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="16dp"
            android:text="@string/name"
            android:textColor="#006064"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:autofillHints="Name of Artifact"
            android:inputType="text"
            android:minHeight="48dp"
            android:hint="@string/add_a_name"
            tools:ignore="LabelFor,VisualLintTextFieldSize" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="16dp"
            android:text="@string/description"
            android:textColor="#283593"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:autofillHints="dd"
            android:hint="@string/add_a_description"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#3E2723"
            tools:ignore="LabelFor,VisualLintTextFieldSize" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/upload_picture_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload_picture"
            android:layout_marginTop="16dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/update_artifact_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_artifact"
            android:layout_marginTop="16dp"/>

    </LinearLayout>
</ScrollView>
