<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".ArtifactActivity">

    <TextView
        android:id="@+id/HomepageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/artifact_list"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/admin_req_button"
            style="?android:attr/buttonBarStyle"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/view_requests"
            android:visibility="gone" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cabinet_select_btn"
            style="?android:attr/buttonBarStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:text="@string/cabinet_selection"
            tools:ignore="VisualLintButtonSize" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/admin_button"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/add_an_artifact"
            android:visibility="gone"
            style="?android:attr/buttonBarStyle" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText

            android:id="@+id/search_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/search_hint"
            android:inputType="text"
            tools:ignore="LabelFor"
           />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:onClick="onSearchButtonClick"
            style="?android:attr/buttonBarStyle" />


    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/view_notifications_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/view_notifications"
        android:textAllCaps="true"
        android:contentDescription="@string/view_notification_button"
      />



    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/artifact_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:visibility="visible"
        />


</LinearLayout>