<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/login"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/email"
        android:inputType="text"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        tools:ignore="TextFields"
        android:autofillHints="" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"

        android:hint="@string/password"

        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:autofillHints="" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/login_btnIn"
        android:textSize="16sp"
        android:textColor="#ffffff"
        android:elevation="4dp"
        android:padding="16dp"
        android:drawablePadding="8dp"
        android:fontFamily="@font/roboto_medium" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/create_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/create_btnIn"
        android:textSize="16sp"
        android:textColor="#ffffff"
        android:elevation="4dp"
        android:padding="16dp"
        android:drawablePadding="8dp"
        android:fontFamily="@font/roboto_medium" />



<com.google.android.material.button.MaterialButton
        android:id="@+id/guest_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="@string/continue_as_guest"
        android:textSize="16sp"
         />
<!--

    <Button
        android:id="@+id/user_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="Continue as User"
        android:textSize="16sp"
        />

    <Button
        android:id="@+id/admin_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="Continue as Admin"
        android:textSize="16sp"
        />
-->


</LinearLayout>