<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_back">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Create an Artifact"
            android:textSize="24sp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16dp"
            android:textColor="@color/black"/>

        <ImageView
            android:id="@+id/tempImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
             />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Name"
            android:textSize="18sp"
            android:padding="16dp"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_marginTop="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="18sp"
            android:padding="16dp"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/etDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_marginTop="8dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/upload_picture_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload_picture"
            android:onClick="uploadPicture"
            android:layout_marginTop="16dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCreateArtifact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_artifact"
            android:onClick="createArtifact"
            android:layout_marginTop="16dp"/>

    </LinearLayout>
</ScrollView>
